Add css to the whole page. Dark theme. Also add positioning to elements, sidebar, button.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>The Library</title>
 </head>
 <body>
-    <div class="library-container"></div>
+    <div class="container">
+        <div class="sidebar">
+            <button>Add New Book</button>
+        </div>
+        <div class="library-container"></div>
+    </div>
 </body>
 </html>
