--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <button>Add New Book</button>
+            <button class="add-book">Add New Book</button>
+            <dialog id="form-dialog">
+                <form method="dialog" id="book-form">
+                    <label for="title">Title</label>
+                    <input type="text" name="title" id="title">
+                    <label for="author">Author</label>
+                    <input type="text" name="author" id="author">
+                    <label for="pages">Pages</label>
+                    <input type="number" name="pages" id="pages">
+                    <label for="Read">Read</label>
+                    <input type="checkbox" name="read" id="read">
+                    <button type="submit">Add Book</button>
+                </form>
+            </dialog>
         </div>
         <div class="library-container"></div>
     </div>
