Add better styling for buttons. Adjust spacing in buttons. Add checkbox to label line.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
                     <input type="text" name="author" id="author" required>
                     <label for="pages">Pages</label>
                     <input type="number" name="pages" id="pages" required>
-                    <label for="Read">Read</label>
-                    <input type="checkbox" name="read" id="read">
-                    <button type="submit" id="submit-book">Add Book</button>
+                    <div class="checkbox-wrapper">
+                        <label for="Read">Read</label>
+                        <input type="checkbox" name="read" id="read">
+                    </div>
+                    <div id="buttons">
+                        <button type="submit" id="submit-book">Add Book</button>
+                        <button type="button" onclick="document.getElementById('form-dialog').close()">Cancel</button>
+                    </div>
                 </form>
             </dialog>
         </div>
